# api-client

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: audit.rs  cookies.rs  lib.rs  req.rs  types.rs
tests/unit/: audit_tests.rs  client_tests.rs  cookie_tests.rs  mod.rs  types_tests.rs
