[package]
authors = ["Olegs Korsaks <olegs.korsaks@bixority.com>"]
categories = ["api-client", "python"]
description = "API client"
edition = "2024"
keywords = ["api", "client", "python"]
license = "GPL-3.0-only"
name = "api-client"
readme = "README.md"
repository = "https://github.com/bixority/api-client"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "api_client"


[dependencies]
http = "1.4"
reqwest = { version = "0.13", features = ["json", "cookies", "rustls"], default-features = false }
pyo3 = { version = "0.29", features = ["extension-module"], optional = true }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.53", features = ["full"] }
futures = "0.3"
url = "2.5"
tower = "0.5"
tracing = "0.1"

[features]
python = ["dep:pyo3", "dep:pyo3-async-runtimes"]

[dev-dependencies]
tokio = { version = "1.52", features = ["full", "test-util"] }

[lints.rust]
linker_messages = "allow"
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
needless_for_each = { level = "allow", priority = 1 }

[profile.dev]
debug = true
incremental = true
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[profile.release.package."*"]
codegen-units = 1
debug = false
opt-level = 3
strip = true
